--- a/packages/atomic/src/components/search/atomic-result-link/atomic-result-link.mdx
+++ b/packages/atomic/src/components/search/atomic-result-link/atomic-result-link.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicResultLinkStories from './atomic-result-link.new.stories';
-import { AtomicDocTemplate } from '../../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicResultLinkStories} />
