doc pr comments
https://coveord.atlassian.net/browse/KIT-4921

--- a/packages/atomic/src/components/search/atomic-query-error/atomic-query-error.mdx
+++ b/packages/atomic/src/components/search/atomic-query-error/atomic-query-error.mdx
@@ -12,7 +12,7 @@ import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/ato
   className="AtomicQueryError"
 >
 
-This component is used to display an error message when a query fails. It is typically placed within the "main" section of the layout, often alongside other components that display search results.
+This component is typically placed within the "main" section of the layout, often alongside other components that display search results.
 
 ```html
 <atomic-search-interface>
