--- a/packages/atomic/src/components/search/atomic-breadbox/atomic-breadbox.mdx
+++ b/packages/atomic/src/components/search/atomic-breadbox/atomic-breadbox.mdx
@@ -1,54 +1,45 @@
-import {Canvas, Meta} from '@storybook/blocks';
+import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicBreadboxStories from './atomic-breadbox.new.stories';
+import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicBreadboxStories} />
 
-# atomic-breadbox
+<AtomicDocTemplate
+  stories={AtomicBreadboxStories}
+  githubPath="search/atomic-breadbox/atomic-breadbox.ts"
+  tagName="atomic-breadbox"
+  className="AtomicBreadbox"
+>
 
 The `atomic-breadbox` component creates breadcrumbs that display a summary of the currently active facet values.
 This component helps users understand and manage their current filter selections by showing them in a compact, visual format.
 
-## Usage
+This component is typically placed within the "status" section of the layout, above the search results.
 
 ```html
-<atomic-breadbox></atomic-breadbox>
+<atomic-search-interface>
+  ...
+  <atomic-layout-section section="search">
+    <atomic-search-box></atomic-search-box>
+  </atomic-layout-section>
+  
+  <atomic-layout-section section="facets">
+    <atomic-facet field="objecttype" label="Object type"></atomic-facet>
+    <atomic-facet field="filetype" label="File type"></atomic-facet>
+    <atomic-facet field="source" label="Source"></atomic-facet>
+  </atomic-layout-section>
+  
+  <atomic-layout-section section="main">
+    <atomic-layout-section section="status">
+      
+      <atomic-breadbox></atomic-breadbox>
+      
+    </atomic-layout-section>
+    
+    <atomic-layout-section section="results">
+      <atomic-result-list></atomic-result-list>
+    </atomic-layout-section>
+  </atomic-layout-section>
+</atomic-search-interface>
 ```
-
-## Props
-
-### pathLimit
-
-Controls the display depth of the path by specifying the number of parent or ancestor breadcrumb links relative to the currently selected value.
-
-- If the path size is equal to or less than the pathLimit, all values in the path will be displayed without truncation.
-- If the path size exceeds the pathLimit, it will truncate the path by replacing the middle values with ellipses ('...').
-
-**Type:** `number`  
-**Default:** `3`  
-**Minimum:** `1`
-
-## Parts
-
-The component exposes the following parts for styling:
-
-- `container` - The container of the whole component, list & label.
-- `breadcrumb-list-container` - The container of the list of breadcrumb buttons.
-- `breadcrumb-list` - The list of breadcrumb buttons.
-- `breadcrumb-button` - A single breadcrumb button.
-- `breadcrumb-label` - The breadcrumb label, associated with the facet.
-- `breadcrumb-value` - The breadcrumb formatted value.
-- `breadcrumb-clear` - The button to clear individual filters.
-- `show-more` - The button to display all breadcrumbs.
-- `show-less` - The button to display less breadcrumbs.
-- `label` - The "Filters" label.
-- `clear` - The button to clear all filters.
-
-## Examples
-
-### Default
-
-<Canvas of={AtomicBreadboxStories.Default} />
-
-### With Rating Facet
-
-<Canvas of={AtomicBreadboxStories.WithRatingFacet} />
+</AtomicDocTemplate>
