--- a/packages/atomic/src/components/search/atomic-color-facet/atomic-color-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-color-facet/atomic-color-facet.mdx
@@ -11,11 +11,9 @@ import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/ato
   className="AtomicColorFacet"
 >
 
-The `atomic-color-facet` component displays a facet of the results for the current query as colors. This is useful when you want to represent facet values visually, such as file types, categories, or any field whose values can be associated with distinct colors.
+Use this component when facet values benefit from visual color representation—such as file types, status indicators, or product categories. Unlike standard facets that display only text labels, color facets provide immediate visual recognition through customizable color boxes or color-coded checkboxes.
 
-This component is typically placed within the "facets" section of the layout.
-
-You can also place facets inside an <a href="https://docs.coveo.com/en/2918">`atomic-facet-manager`</a> component to leverage the Dynamic Navigation Experience (DNE) feature.
+Place this component within the "facets" section of your search layout. For Dynamic Navigation Experience (DNE) support, nest it inside an `atomic-facet-manager` component (see [DNE documentation](https://docs.coveo.com/en/2918)).
 
 ## Usage
 
