use @/ for storybook path

--- a/packages/atomic/src/components/commerce/atomic-commerce-did-you-mean/atomic-commerce-did-you-mean.mdx
+++ b/packages/atomic/src/components/commerce/atomic-commerce-did-you-mean/atomic-commerce-did-you-mean.mdx
@@ -1,7 +1,7 @@
 import { Canvas, ArgTypes, Meta, Title, Description, Stories, Subtitle } from '@storybook/addon-docs/blocks';
 import * as AtomicCommerceDidYouMeanStories from './atomic-commerce-did-you-mean.new.stories';
 import { CanvasWithGithub } from '../../../../storybook-utils/documentation/canvas-with-github';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicCommerceDidYouMeanStories} />
 
