--- a/packages/atomic/src/components/common/atomic-layout-section/atomic-layout-section.mdx
+++ b/packages/atomic/src/components/common/atomic-layout-section/atomic-layout-section.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicLayoutSectionStories from './atomic-layout-section.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicLayoutSectionStories} />
