--- a/packages/atomic/src/components/search/atomic-results-per-page/atomic-results-per-page.mdx
+++ b/packages/atomic/src/components/search/atomic-results-per-page/atomic-results-per-page.mdx
@@ -1,6 +1,6 @@
 import {Meta} from '@storybook/addon-docs/blocks';
 import * as AtomicResultsPerPageStories from './atomic-results-per-page.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicResultsPerPageStories} />
