--- a/packages/atomic/src/components/commerce/atomic-commerce-facet/atomic-commerce-facet.mdx
+++ b/packages/atomic/src/components/commerce/atomic-commerce-facet/atomic-commerce-facet.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicCommerceFacetStories from './atomic-commerce-facet.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicCommerceFacetStories} />
