--- a/packages/atomic/src/components/commerce/atomic-commerce-facets/atomic-commerce-facets.mdx
+++ b/packages/atomic/src/components/commerce/atomic-commerce-facets/atomic-commerce-facets.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicCommerceFacetsStories from './atomic-commerce-facets.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicCommerceFacetsStories} />
