--- a/packages/atomic/src/components/commerce/atomic-commerce-interface/atomic-commerce-interface.mdx
+++ b/packages/atomic/src/components/commerce/atomic-commerce-interface/atomic-commerce-interface.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicCommerceInterfaceStories from './atomic-commerce-interface.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicCommerceInterfaceStories} />
