--- a/packages/atomic/src/components/commerce/atomic-commerce-refine-modal/atomic-commerce-refine-modal.mdx
+++ b/packages/atomic/src/components/commerce/atomic-commerce-refine-modal/atomic-commerce-refine-modal.mdx
@@ -1,7 +1,7 @@
 
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicCommerceRefineModalStories from './atomic-commerce-refine-modal.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicCommerceRefineModalStories} />
