--- a/packages/atomic/src/components/commerce/atomic-commerce-text/atomic-commerce-text.mdx
+++ b/packages/atomic/src/components/commerce/atomic-commerce-text/atomic-commerce-text.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicCommerceTextStories from './atomic-commerce-text.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicCommerceTextStories} />
 
