--- a/packages/atomic/src/components/commerce/atomic-product-children/atomic-product-children.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-children/atomic-product-children.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductChildrenStories from './atomic-product-children.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductChildrenStories} />
