--- a/packages/atomic/src/components/commerce/atomic-product-description/atomic-product-description.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-description/atomic-product-description.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductDescriptionStories from './atomic-product-description.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductDescriptionStories} />
