--- a/packages/atomic/src/components/commerce/atomic-product-excerpt/atomic-product-excerpt.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-excerpt/atomic-product-excerpt.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductExcerptStories from './atomic-product-excerpt.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductExcerptStories} />
