--- a/packages/atomic/src/components/commerce/atomic-product-field-condition/atomic-product-field-condition.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-field-condition/atomic-product-field-condition.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductFieldConditionStories from './atomic-product-field-condition.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductFieldConditionStories} />
