--- a/packages/atomic/src/components/commerce/atomic-product-image/atomic-product-image.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-image/atomic-product-image.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductImageStories from './atomic-product-image.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductImageStories} />
