--- a/packages/atomic/src/components/commerce/atomic-product-link/atomic-product-link.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-link/atomic-product-link.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductLinkStories from './atomic-product-link.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductLinkStories} />
