--- a/packages/atomic/src/components/commerce/atomic-product-numeric-field-value/atomic-product-numeric-field-value.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-numeric-field-value/atomic-product-numeric-field-value.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductNumericFieldValueStories from './atomic-product-numeric-field-value.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductNumericFieldValueStories} />
