--- a/packages/atomic/src/components/commerce/atomic-product-price/atomic-product-price.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-price/atomic-product-price.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductPriceStories from './atomic-product-price.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductPriceStories} />
