--- a/packages/atomic/src/components/commerce/atomic-product-rating/atomic-product-rating.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-rating/atomic-product-rating.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductRatingStories from './atomic-product-rating.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductRatingStories} />
