--- a/packages/atomic/src/components/commerce/atomic-product-template/atomic-product-template.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-template/atomic-product-template.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductTemplateStories from './atomic-product-template.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductTemplateStories} />
