--- a/packages/atomic/src/components/commerce/atomic-product-text/atomic-product-text.mdx
+++ b/packages/atomic/src/components/commerce/atomic-product-text/atomic-product-text.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicProductTextStories from './atomic-product-text.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicProductTextStories} />
