--- a/packages/atomic/src/components/common/atomic-aria-live/atomic-aria-live.mdx
+++ b/packages/atomic/src/components/common/atomic-aria-live/atomic-aria-live.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicAriaLiveStories from './atomic-aria-live.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicAriaLiveStories} />
