--- a/packages/atomic/src/components/insight/atomic-insight-interface/atomic-insight-interface.mdx
+++ b/packages/atomic/src/components/insight/atomic-insight-interface/atomic-insight-interface.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicInsightInterfaceStories from './atomic-insight-interface.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={ AtomicInsightInterfaceStories } />
 
