--- a/packages/atomic/src/components/search/atomic-breadbox/atomic-breadbox.mdx
+++ b/packages/atomic/src/components/search/atomic-breadbox/atomic-breadbox.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicBreadboxStories from './atomic-breadbox.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicBreadboxStories} />
 
