--- a/packages/atomic/src/components/search/atomic-external/atomic-external.mdx
+++ b/packages/atomic/src/components/search/atomic-external/atomic-external.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicExternalStories from './atomic-external.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={ AtomicExternalStories } />
 
