--- a/packages/atomic/src/components/search/atomic-load-more-results/atomic-load-more-results.mdx
+++ b/packages/atomic/src/components/search/atomic-load-more-results/atomic-load-more-results.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicLoadMoreResultsStories from './atomic-load-more-results.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicLoadMoreResultsStories} />
