--- a/packages/atomic/src/components/search/atomic-pager/atomic-pager.mdx
+++ b/packages/atomic/src/components/search/atomic-pager/atomic-pager.mdx
@@ -1,6 +1,6 @@
 import {Meta} from '@storybook/addon-docs/blocks';
 import * as AtomicPagerStories from './atomic-pager.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicPagerStories} />
