--- a/packages/atomic/src/components/search/atomic-query-error/atomic-query-error.mdx
+++ b/packages/atomic/src/components/search/atomic-query-error/atomic-query-error.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicQueryErrorStories from './atomic-query-error.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicQueryErrorStories} />
