--- a/packages/atomic/src/components/search/atomic-query-summary/atomic-query-summary.mdx
+++ b/packages/atomic/src/components/search/atomic-query-summary/atomic-query-summary.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicQuerySummaryStories from './atomic-query-summary.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={ AtomicQuerySummaryStories } />
 
