--- a/packages/atomic/src/components/search/atomic-result-children-template/atomic-result-children-template.mdx
+++ b/packages/atomic/src/components/search/atomic-result-children-template/atomic-result-children-template.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicResultChildrenTemplateStories from './atomic-result-children-template.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicResultChildrenTemplateStories} />
