--- a/packages/atomic/src/components/search/atomic-result-number/atomic-result-number.mdx
+++ b/packages/atomic/src/components/search/atomic-result-number/atomic-result-number.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicResultNumberStories from './atomic-result-number.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicResultNumberStories} />
 
