--- a/packages/atomic/src/components/search/atomic-result-template/atomic-result-template.mdx
+++ b/packages/atomic/src/components/search/atomic-result-template/atomic-result-template.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicResultTemplateStories from './atomic-result-template.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicResultTemplateStories} />
