--- a/packages/atomic/src/components/search/atomic-search-box-query-suggestions/atomic-search-box-query-suggestions.mdx
+++ b/packages/atomic/src/components/search/atomic-search-box-query-suggestions/atomic-search-box-query-suggestions.mdx
@@ -1,6 +1,6 @@
 import {Meta} from '@storybook/addon-docs/blocks';
 import * as AtomicSearchBoxQuerySuggestionsStories from './atomic-search-box-query-suggestions.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicSearchBoxQuerySuggestionsStories} />
