--- a/packages/atomic/src/components/search/atomic-segmented-facet-scrollable/atomic-segmented-facet-scrollable.mdx
+++ b/packages/atomic/src/components/search/atomic-segmented-facet-scrollable/atomic-segmented-facet-scrollable.mdx
@@ -1,6 +1,6 @@
 import {Meta} from '@storybook/addon-docs/blocks';
 import * as AtomicSegmentedFacetScrollableStories from './atomic-segmented-facet-scrollable.new.stories';
-import {AtomicDocTemplate} from '../../../../../storybook-utils/documentation/atomic-doc-template';
+import {AtomicDocTemplate} from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicSegmentedFacetScrollableStories} />
 
