--- a/packages/atomic/src/components/search/atomic-text/atomic-text.mdx
+++ b/packages/atomic/src/components/search/atomic-text/atomic-text.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicTextStories from './atomic-text.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicTextStories} />
 
