--- a/packages/atomic/src/components/search/atomic-field-condition/atomic-field-condition.mdx
+++ b/packages/atomic/src/components/search/atomic-field-condition/atomic-field-condition.mdx
@@ -11,21 +11,37 @@ import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/ato
   className="AtomicFieldCondition"
 >
 
-`atomic-field-condition` conditionally renders its content based on result attributes.
-This component can verify whether specified fields are defined, not defined, match specific values, or do not match specific values.
+Use this component within `atomic-result-template` to conditionally render content based on result properties. It evaluates conditions and only displays its children when all conditions are satisfied. Conditions can target any top-level result property, not just fields (e.g., `isRecommendation`).
 
-It is typically used within `atomic-result-template`.
+You can specify multiple `must-match-*` and `must-not-match-*` attributes, each targeting a different field. Each attribute accepts multiple comma-separated values.
+
+**Comma represents OR:** Within a single attribute, comma-separated values represent a logical OR. For example, `must-match-filetype="pdf,docx"` means the filetype must be pdf OR docx.
+
+**Multiple attributes represent AND:** All conditions from different attributes must be met (logical AND) for content to render.
+
+If you set both `must-match-*` and `must-not-match-*` for the same field with overlapping values, the condition will never be satisfied.
 
 ```html
 <atomic-result-template>
-  ... 
-
-  <atomic-field-condition
-    if-defined="author"
-  >
-  <span>Render me if <strong>author</strong> is defined.</span>
+  <!-- Show only if author field exists -->
+  <atomic-field-condition if-defined="author">
+    <span>Written by: <atomic-result-text field="author"></atomic-result-text></span>
   </atomic-field-condition>
   
+  <!-- Show badge for PDF or Word documents -->
+  <atomic-field-condition must-match-filetype="pdf,docx">
+    <span class="document-badge">Document</span>
+  </atomic-field-condition>
+  
+  <!-- Show if author exists AND source is not internal -->
+  <atomic-field-condition if-defined="author" must-not-match-source="internal">
+    <span>External author: <atomic-result-text field="author"></atomic-result-text></span>
+  </atomic-field-condition>
+  
+  <!-- This will never render (conflicting conditions) -->
+  <atomic-field-condition must-match-filetype="pdf" must-not-match-filetype="pdf">
+    <span>Impossible</span>
+  </atomic-field-condition>
 </atomic-result-template>
 ```
 
