--- a/packages/atomic/src/components/search/atomic-tab/atomic-tab.mdx
+++ b/packages/atomic/src/components/search/atomic-tab/atomic-tab.mdx
@@ -12,8 +12,7 @@ import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/ato
   className="AtomicTab"
 >
 
-The `atomic-tab` component represents an individual tab within the `atomic-tab-manager` component.
-It must be used as a child of the `atomic-tab-manager` component to function correctly.
+The `atomic-tab` component must be used as a child of the `atomic-tab-manager` component to function correctly.
 
 This component is not used standalone. It must be a child of `atomic-tab-manager`.
 
