--- a/packages/atomic/src/components/search/atomic-facet-manager/atomic-facet-manager.mdx
+++ b/packages/atomic/src/components/search/atomic-facet-manager/atomic-facet-manager.mdx
@@ -10,11 +10,29 @@ import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/ato
   tagName="atomic-facet-manager"
   className="AtomicFacetManager"
 >
-The `atomic-facet-manager` is designed to handle the removal and re-attachment of <a href="?path=/story/atomic-facet--default">facet</a> components
-to the DOM.
-This means that the [Stencil lifecycle](https://stenciljs.com/docs/component-lifecycle#component-lifecycle-methods) applies to the slotted facets.
 
-If you <a href="https://docs.coveo.com/en/atomic/latest/usage/custom-web-components#custom-component-example">create your own custom facet component</a> and slot it inside of the `atomic-facet-manager`, it will have to be able to handle the Stencil reattachment lifecycle.
-Alternately, you can place your custom component outside of the `atomic-facet-manager`, in which case the Stencil lifecycle won’t apply.
+Place facets inside the `atomic-facet-manager` component within the "facets" section of your layout:
+
+
+```html
+<atomic-search-interface>
+  ...
+  <atomic-search-layout>
+    <atomic-layout-section section="facets">
+      <atomic-facet-manager collapse-facets-after="4">
+        <atomic-facet field="author" label="Authors"></atomic-facet>
+        <atomic-facet field="source" label="Source"></atomic-facet>
+        <atomic-category-facet field="geographicalhierarchy" label="Geography"></atomic-category-facet>
+        <atomic-numeric-facet field="ytviewcount" label="Views"></atomic-numeric-facet>
+        <atomic-automatic-facet-generator desired-count="3"></atomic-automatic-facet-generator>
+      </atomic-facet-manager>
+    </atomic-layout-section>
+  </atomic-search-layout>
+</atomic-search-interface>
+```
+
+## Dynamic Navigation Experience (DNE)
+The facet manager leverages Coveo's [Dynamic Navigation Experience](https://docs.coveo.com/en/3383) to automatically the order facets based on their relevance to the current search query.
+It also automatically selects facets to improve the user experience.
 
 </AtomicDocTemplate>
