--- a/packages/atomic/src/components/search/atomic-result-fields-list/atomic-result-fields-list.mdx
+++ b/packages/atomic/src/components/search/atomic-result-fields-list/atomic-result-fields-list.mdx
@@ -8,7 +8,6 @@ import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-te
 <AtomicDocTemplate
   stories={AtomicResultFieldsListStories}
   githubPath="search/result-template-components/atomic-result-fields-list/atomic-result-fields-list.ts"
-  tagName="atomic-result-fields-list"
   className="AtomicResultFieldsList"
 >
 
@@ -27,15 +26,15 @@ Use inside an `atomic-result-template` to display multiple fields with automatic
     <atomic-result-template>
       <template>
         <atomic-result-fields-list>
-          <atomic-field-condition class="field" if-defined="author">
+          <span class="field">
             <span class="field-label">Author:</span>
             <atomic-result-text field="author"></atomic-result-text>
-          </atomic-field-condition>
+          </span>
 
-          <atomic-field-condition class="field" if-defined="source">
+          <span class="field">
             <span class="field-label">Source:</span>
             <atomic-result-text field="source"></atomic-result-text>
-          </atomic-field-condition>
+          </span>
 
           <span class="field">
             <span class="field-label">Date:</span>
@@ -47,31 +46,6 @@ Use inside an `atomic-result-template` to display multiple fields with automatic
   </atomic-result-list>
   ...
 </atomic-search-interface>
-```
-
-### Responsive Behavior
-
-The component automatically:
-- Displays all children when there's sufficient space
-- Hides the smallest children first when the container is too narrow
-- Adds visual dividers between fields
-- Hides dividers at the end of each row
-
-### Styling Children
-
-For proper display, children should have inline-flex display:
-
-```css
-.field {
-  display: inline-flex;
-  white-space: nowrap;
-  align-items: center;
-}
-
-.field-label {
-  font-weight: bold;
-  margin-right: 0.25rem;
-}
 ```
 
 </AtomicDocTemplate>
