--- a/packages/atomic/src/components/search/atomic-did-you-mean/atomic-did-you-mean.mdx
+++ b/packages/atomic/src/components/search/atomic-did-you-mean/atomic-did-you-mean.mdx
@@ -29,7 +29,7 @@ This component is typically placed within the "status" section of the layout.
 </atomic-search-interface>
 ```
 
-Using the _Did You Mean_ component is with your search page is a best practice, especially if your index has search terms that can be misinterpreted as an error.
+Using the _Did You Mean_ component with your search page is a best practice, especially if your index has search terms that can be misinterpreted as an error.
 The relevance of the corrections improves with the size of the index, as more terms become available for comparison.
 
 It's possible to define certain phrases or terms in an organization’s thesaurus, which will expand or replace the query expression before executing the query.
