--- a/packages/atomic/src/components/search/atomic-rating-range-facet/atomic-rating-range-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-rating-range-facet/atomic-rating-range-facet.mdx
@@ -1,6 +1,6 @@
 import {Meta} from '@storybook/addon-docs/blocks';
 import * as AtomicRatingRangeFacetStories from './atomic-rating-range-facet.new.stories';
-import {AtomicDocTemplate} from '../../../../../storybook-utils/documentation/atomic-doc-template';
+import {AtomicDocTemplate} from '../../../../storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicRatingRangeFacetStories} />
 
