--- a/packages/atomic/src/components/search/atomic-result-link/atomic-result-link.mdx
+++ b/packages/atomic/src/components/search/atomic-result-link/atomic-result-link.mdx
@@ -1,7 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicResultLinkStories from './atomic-result-link.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
-
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicResultLinkStories} />
 
@@ -11,7 +10,6 @@ import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/ato
   tagName="atomic-result-link"
   className="AtomicResultLink"
 >
-
 
 The `atomic-result-link` component automatically transforms a search result **title** into a clickable link that points to the original item. This component is used within `atomic-result-template` components inside the result list:
 
