Update stories / tests

--- a/packages/atomic/src/components/search/atomic-color-facet/atomic-color-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-color-facet/atomic-color-facet.mdx
@@ -24,7 +24,7 @@ Place this component within the "facets" section of your search layout. For Dyna
     ...
     <atomic-layout-section section="facets">
       ...
-        <atomic-color-facet field="filetype" label="File Types"></atomic-color-facet>
+        <atomic-color-facet field="filetype" label="File Type"></atomic-color-facet>
 
     </atomic-layout-section>
   </atomic-search-layout>
