--- a/packages/atomic/src/components/search/atomic-did-you-mean/atomic-did-you-mean.mdx
+++ b/packages/atomic/src/components/search/atomic-did-you-mean/atomic-did-you-mean.mdx
@@ -21,7 +21,7 @@ This component is typically placed within the "status" section of the layout.
       ...
       <atomic-layout-section section="status">
         
-        <atomic-did-you-mean></atomic-commerce-did-you-mean>
+        <atomic-did-you-mean></atomic-did-you-mean>
 
       </atomic-layout-section>
     </atomic-layout-section>
@@ -37,9 +37,10 @@ However, the _Did You Mean_ component won’t process queries expanded by the th
 
 
 ### Common Use Cases
-* The current query returns results, but the index has more frequently occurring terms with similar spelling, the component presents a link containing the new terms.
+* When a query returns no results but finds a possible query correction, the component automatically triggers a new query with the suggested term. This prevents the user having to rewrite their query, which saves them time.
+* When the current query returns results, but the index has more frequently occurring terms with similar spelling, the component presents a link containing the new terms.
 When clicked, the link triggers a new query using the corrected keywords.
-* A soft nudge asking them if that's what they meant can direct them to the most relevant results.
+* A soft nudge asking users if that's what they meant can direct them to the most relevant results.
 
 ## Reference
 
