--- a/packages/atomic/src/components/search/atomic-tab-manager/atomic-tab-manager.mdx
+++ b/packages/atomic/src/components/search/atomic-tab-manager/atomic-tab-manager.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicTabManagerStories from './atomic-tab-manager.new.stories';
-import { AtomicDocTemplate } from '../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
 
 
 <Meta of={AtomicTabManagerStories} />
