--- a/packages/atomic/src/components/search/atomic-popover/atomic-popover.mdx
+++ b/packages/atomic/src/components/search/atomic-popover/atomic-popover.mdx
@@ -12,7 +12,7 @@ import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/ato
   className="AtomicPopover"
 >
 
-The `atomic-popover` component displays facets as compact popover menus. When a user clicks the popover button, a backdrop appears along with a popover containing one or more facets.
+The `atomic-popover` component displays a facet as a compact popover menu. When a user clicks the popover button, a backdrop appears along with a popover containing a single facet.
 
 ```html
 <atomic-search-interface>
