--- a/packages/atomic/src/components/search/atomic-format-currency/atomic-format-currency.mdx
+++ b/packages/atomic/src/components/search/atomic-format-currency/atomic-format-currency.mdx
@@ -10,6 +10,7 @@ import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-te
   githubPath="search/atomic-format-currency/atomic-format-currency.ts"
   tagName="atomic-format-currency"
   className="AtomicFormatCurrency"
+  defaultStory="Facet"
 >
 
 The `atomic-format-currency` component is used for formatting currencies.
@@ -48,7 +49,5 @@ The `currency` property accepts ISO 4217 currency codes, such as:
 - `"EUR"` for the euro
 - `"GBP"` for the British pound
 - `"CNY"` for the Chinese RMB
-
-See the [currency & funds code list](https://www.six-group.com/en/products-services/financial-information/data-standards.html#scrollTo=maintenance-agency) for all available codes.
 
 </AtomicDocTemplate>
