--- a/packages/atomic/src/components/search/atomic-format-number/atomic-format-number.mdx
+++ b/packages/atomic/src/components/search/atomic-format-number/atomic-format-number.mdx
@@ -10,6 +10,7 @@ import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-te
   githubPath="search/atomic-format-number/atomic-format-number.ts"
   tagName="atomic-format-number"
   className="AtomicFormatNumber"
+  defaultStory="Facet"
 >
 
 The `atomic-format-number` component is used for number formatting.
@@ -50,21 +51,5 @@ The component supports several formatting options:
 - `maximum-fraction-digits`: The maximum number of fraction digits to use
 - `minimum-significant-digits`: The minimum number of significant digits to use
 - `maximum-significant-digits`: The maximum number of significant digits to use
-
-### Examples
-
-#### With Minimum Fraction Digits
-
-```html
-<atomic-format-number minimum-fraction-digits="2"></atomic-format-number>
-```
-This will format `123` as `123.00`.
-
-#### With Maximum Fraction Digits
-
-```html
-<atomic-format-number maximum-fraction-digits="1"></atomic-format-number>
-```
-This will format `123.456` as `123.5`.
 
 </AtomicDocTemplate>
