--- a/packages/atomic/src/components/search/atomic-result-printable-uri/atomic-result-printable-uri.mdx
+++ b/packages/atomic/src/components/search/atomic-result-printable-uri/atomic-result-printable-uri.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as AtomicResultPrintableUriStories from './atomic-result-printable-uri.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={ AtomicResultPrintableUriStories } />
 
