Moved sections around

--- a/packages/atomic/src/components/search/atomic-facet/atomic-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-facet/atomic-facet.mdx
@@ -38,16 +38,17 @@ The facet component supports three different display modes:
 - **Links**: Single selection only, behave like navigational links
 - **Boxes**: Multi-select with a more visual appearance, presents more values in compact space
 
+### Common Use Cases
+
+Facets are useful for large indexes because they provide multiple filters, one for every specific aspect of the content. 
+Faceted navigation helps the user get an overview of the content available, helping them understand how to search for it.
+
 ## UX Best Practices
 
 - Don’t use boxes if your facet values are long, it won’t provide a good experience for your users and you risk truncating values.
 - Place facets on the left side of the search page; this is the most natural place for them and is where users expect to see them.
 - Positioning facets on the right side results in lower adoption and decreases the usability of the search page.
-
-### Common Use Cases
-
-Facets are useful for large indexes because they provide multiple filters, one for every specific aspect of the content. 
-Faceted navigation helps the user get an overview of the content available, helping them understand how to search for it.
+- Adding an optional search box to a facet can help find specific values inside larger sets.
 
 ## Reference
 
