--- a/packages/atomic/src/components/search/atomic-generated-answer/atomic-generated-answer.mdx
+++ b/packages/atomic/src/components/search/atomic-generated-answer/atomic-generated-answer.mdx
@@ -1,6 +1,6 @@
 import {Meta} from '@storybook/addon-docs/blocks';
 import * as AtomicGeneratedAnswerStories from './atomic-generated-answer.new.stories';
-import {AtomicDocTemplate} from '../../../storybook-utils/documentation/atomic-doc-template';
+import {AtomicDocTemplate} from '../../../../storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={AtomicGeneratedAnswerStories} />
 
