--- a/packages/atomic/src/components/search/atomic-facet/atomic-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-facet/atomic-facet.mdx
@@ -35,7 +35,7 @@ More info here: <a href="https://docs.coveo.com/en/2918" target="_blank">atomic-
 The facet component supports three different display modes:
 
 - **Checkboxes** (default): The most commonly used display, allows multiple selections
-- **Links**: Single selection only, behave like navigational links
+- **Links**: Single selection only, behaves like navigational links
 - **Boxes**: Multi-select with a more visual appearance, presents more values in compact space
 
 ### Common Use Cases
